27/4/12
  Fixed click to focus

22/4/12
  Added check for stray ampersands in the external text
  Seperated the font colours from the bar in the config.h and the rc files
  Fix for window focus changing when a transient window pops up

21/4/12
  Seperated the bar and window colours in the config.h and rc files

20/4/12
  Added option in the config to choose which mod key is used when
   moving/resizing in stacking mode
  Fix for focus swapping between overlapping windows in stacking mode

13/4/12
  Added stacking mode

7/4/12
  Fix for transient windows going off the screen

1/4/12
  Added switching clicktofocus to the rc file
  Added adjusting the displayed length of the current window's name in the bar
    to the config and the rc file

25/3/12
  Fix for firefox menu disappearing after deleting an entry

10/3/12
  Added error checking for desktop names in the switcher
  Added option for the default font in the config.h

8/3/12
  Added option in config.h and rc file to have new window opened at the
   top or bottom of the stack when using attach aside

7/3/12
  Handles multiple transient windows properly now

28/2/12
  Removed remembering previous current window as not woking properly

19/2/12
  Desktop switcher can show number of open windows on unfocused desktops and in fullscreen mode
  Option to show number of windows open in the desktop switcher in the config and rc file
  Fix for windows not mapping when changing default mode from Fullscreen in the rc file
  New window has mouse warped to it if FOLLOW_MOUSE is 0
  prev_current is updated if mouse moves to new window

12/2/12
  Added number of open windows to focused desktop in fullscreen mode
  Clicking on the current desktop in the switcher will focus the next window

11/2/12
  Fixed occasional flicker from focused windows' name in the bar
  Fine tuned fullscreen mode

7/2/12
  When changing desktops move cursor to center of current window before mapping

6/2/12
  Fixed flicker in the external text