@@ -1,3 +1,8 @@
+30/5/12
+  Added support for multibyte fonts
+  When updating, don't change modes for desktops with open windows
+  Center text in desktop switcher with showopen=0
+
 27/4/12
   Fixed click to focus
 
